# validators

./: pyproject.toml
validates/: base_validator.py
validates/strings_validator/: __init__.py  phone_validator.py
